# docs/swagger.json
@@ -51,10 +51,21 @@
                     },
                     {
                         "type": "string",
+                        "description": "Full_name",
+                        "name": "full_name",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
                         "description": "Birthday",
                         "name": "birthday",
-                        "in": "path",
-                        "required": true
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Address",
+                        "name": "address",
+                        "in": "path"
                     }
                 ],
                 "responses": {
